Fix `hr` alignment

--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -32,10 +32,9 @@
   }
 
   & hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 0;
     width: 50%;
+    margin: 1rem auto;
+    border: 0;
     border-top: 0.2rem solid rgba(255, 255, 255, 0.1);
   }
 }
